--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
         <p>I am a web developer and I love to create websites. I am a very good developer and I am always looking for new projects. I am a very good developer and I am always looking for new projects.</p>
       </div>
       <img src="https://ibb.co/d2KyMqV">
+      <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
     </div>
   </main>
   <footer class="footer">
