--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div class="about-me">
       <div class="about-me-text">
         <h2>About Me</h2>
-        <p>I am a web developer and I love to create websites. I am a very good developer and I am always looking for new projects. I am a very good developer and I am always looking for new projects.</p>
+        <p>My interests lie in the field of electrical engineering (signal processing, analog electronics..), RnB music, and computer programming. In the early years of my undergraduate course, in the pursuit to build an hi fidelity audio system, I fell in love with valve tube amplifiers. My belief in signals being the language of existence, because of how they operate in nature, led me to indulge in signal processing  .</p>
       </div>
       <img src="https://ibb.co/d2KyMqV">
       <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
