--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div class="about-me">
       <div class="about-me-text">
         <h2>About Me</h2>
-        <p>My interests lie in the field of electrical engineering (signal processing, analog electronics..), RnB music, and computer programming. In the early years of my undergraduate course, in the pursuit to build hi fidelity audio system, I fell in love with valve tube amplifiers. I enjoy statistical signal processing, embedded ML and working on developing methods to acquire intelligent data for cyber physical systems. I enjoy statistics casually and Im taking MITx's Fundamentals of Statistics course  .</p>
+        <p>My interests lie in the field of electrical engineering (signal processing, analog electronics..), RnB music, poetry, and computer programming. During the early years of my undergraduate course, in the pursuit to build a hi-fidelity audio system, I fell in love with valve tube amplifiers. I quite enjoy research in statistical signal processing and ML whilst also working on developing methods to acquire intelligent data for cyber physical systems. One summer i decided to take MITx's Fundamentals of Statistics course and began to enjoy statistics gretaly as well.</p>
       </div>
       //<img src="https://ibb.co/d2KyMqV">
       <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
