--- a/index.html
+++ b/index.html
@@ -199,9 +199,11 @@
   <header class="header">
     <a href="#" class="logo">Developer</a>
     <nav class="nav-items">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="#">2018</a>
+      <a href="#">2019</a>
+      <a href="#">2020</a>
+      <a href="#">2021</a>
+      <a href="#">2022</a>
     </nav>
   </header>
   <main>
