--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       align-items: center;
       width: 100%;
       height: 520px;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("https://ibb.co/dgnDwj7"><img src="https://i.ibb.co/YZvhFPb/1602955127958.jpg")
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("https://ibb.co/dgnDwj7"><img src="https://i.ibb.co/YZvhFPb/1602955127958.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
