--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       align-items: center;
       width: 100%;
       height: 520px;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("https://ibb.co/3WN4zgQ");
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("https://i.ibb.co/mtqb8fg/maxresdefault-2.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
