--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&family=Raleway:wght@200&display=swap');
 
     body {
       margin: 0;
@@ -25,7 +26,7 @@
 
     .header .logo {
       font-size: 25px;
-      font-family: 'Sriracha', cursive;
+      font-family: 'Poppins', cursive;
       color: #000;
       text-decoration: none;
       margin-left: 30px;
