--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
   </header>
   <main>
     <div class="intro">
-      <h1>A Web Developer</h1>
-      <p>I am a web developer and I love to create websites!!!!.</p>
-      <button>Learn More</button>
+      <h1></h1>
+      <p></p>
+      /* <button>Learn More</button> */
     </div>
     <div class="achievements">
       <div class="work">
