--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     }
 
     .nav-items a {
+      font-family: 'Poppins', cursive;
+      color: #000;
       text-decoration: none;
       color: #000;
       padding: 35px 20px;
