--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     }
 
     .about-me-text h2 {
+      font-family: 'Poppins', cursive;
       font-size: 30px;
       color: #333333;
       text-transform: uppercase;
@@ -142,18 +143,6 @@
       <h1></h1>
       <p></p>
       /* <button>Learn More</button> */
-    </div>
-    <div class="achievements">
-      <div class="work">
-        <i class="fas fa-atom"></i>
-        <p class="work-heading">Projects</p>
-        <p class="work-text">I have worked on many projects and I am very proud of them. I am a very good developer and I am always looking for new projects.</p>
-      </div>
-      <div class="work">
-        <i class="fas fa-ethernet"></i>
-        <p class="work-heading">Network</p>
-        <p class="work-text">I have a lot of network skills and I am very good at them. I am very good at networking and I am always looking for new network skills.</p>
-      </div>
     </div>
     <div class="about-me">
       <div class="about-me-text">
