--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <header class="header">
     <a href="#" class="logo">Prachii K</a>
     <nav class="nav-items">
-      <a href="#">2018</a>
+      <a href="https://cosmictheories.github.io/sparsity/2018">2018</a>
       <a href="#">2019</a>
       <a href="#">2020</a>
       <a href="#">2021</a>
