Update and rename 2018.html to my_work.html

--- a/my_work.html
+++ b/my_work.html
@@ -80,7 +80,8 @@
     }
 
     .about-me-text p {
-      font-size: 15px;
+      font-family: 'Poppins', cursive;
+      font-size: 20px;
       color: #585858;
       margin: 10px 0;
     }
@@ -134,7 +135,7 @@
   <header class="header">
     <a href="#" class="logo">Prachii K</a>
     <nav class="nav-items">
-      <a href="https://cosmictheories.github.io/sparsity/2018">2018</a>
+      <a href="https://cosmictheories.github.io/sparsity/my_work">My work</a>
       <a href="#">2019</a>
       <a href="#">2020</a>
       <a href="#">2021</a>
@@ -145,12 +146,16 @@
     <div class="intro">
       <h1></h1>
       <p></p>
-      /* <button>Learn More</button> */
+    
     </div>
     <div class="about-me">
       <div class="about-me-text">
-        <h2>About Me</h2>
-        <p>My interests lie in the field of electrical engineering (signal processing, analog electronics..), RnB music, poetry, and computer programming. During the early years of my undergraduate course, in the pursuit to build a hi-fidelity audio system, I fell in love with valve tube amplifiers. I quite enjoy research in statistical signal processing and ML whilst also working on developing methods to acquire intelligent data for cyber physical systems. One summer i decided to take MITx's Fundamentals of Statistics course and began to enjoy statistics gretaly as well.</p>
+        <h2>Passion Projects & Research</h2>
+        <div class ="list">
+          <h2> 1)Vacuum Tube Amps</h2>
+          <h2> 2)Chaos Encryption </h2>
+          <h2> 3)Essence of Signal Processing </h2>
+          <h2> 4)PCENs and Signal Processing (Research Publication) </h2>
       </div>
       //<img src="https://ibb.co/d2KyMqV">
       <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
