--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
   <header class="header">
     <a href="#" class="logo">Prachii K</a>
     <nav class="nav-items">
-      <a href="https://cosmictheories.github.io/sparsity/2018">2018</a>
-      <a href="#">2019</a>
+      <a href="https://cosmictheories.github.io/sparsity/my_work">My work</a>
+      <a href="#">Home</a>
       <a href="#">2020</a>
       <a href="#">2021</a>
       <a href="#">2022</a>
