--- a/index.html
+++ b/index.html
@@ -158,9 +158,7 @@
     <div class="bottom-links">
       <div class="links">
         <span>More Info</span>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#">Email: prachii.ku@gmail.com</a>
       </div>
       <div class="links">
         <span>Social Links</span>
