--- a/my_work.html
+++ b/my_work.html
@@ -13,6 +13,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&family=Raleway:wght@200&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:ital,wght@1,700&family=Raleway:wght@200&display=swap');
 
     body {
       margin: 0;
@@ -80,8 +81,8 @@
     }
 
     .about-me-text p {
-      font-family: 'Poppins', cursive;
-      font-size: 20px;
+      font-family: 'Oswald&family=Poppins:ital';
+      font-size: 17px;
       color: #585858;
       margin: 10px 0;
     }
