--- a/my_work.html
+++ b/my_work.html
@@ -155,8 +155,8 @@
         <div class ="list">
           <h2> 1)Vacuum Tube Amps</h2>
           <h2> 2)Chaos Encryption </h2>
-          <h2> 3)Essence of Signal Processing </h2>
-          <h2> 4)PCENs and Signal Processing (Research Publication) </h2>
+          <h2> 3)The essence of Signal Processing </h2>
+          <h2> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication) </h2>
       </div>
       //<img src="https://ibb.co/d2KyMqV">
       <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
