--- a/my_work.html
+++ b/my_work.html
@@ -80,7 +80,7 @@
       margin: 0;
     }
 
-    .about-me-text p {
+    .about-me-text a {
       font-family: 'Oswald&family=Poppins:ital';
       font-size: 17px;
       color: #585858;
@@ -162,7 +162,7 @@
       <div class="about-me-text">
         <h2>Passion Projects & Research</h2>
         <div class ="list">
-          <h2> 1)Vacuum Tube Amps</h2>
+          <a href="#">1) Vacuum Tube Amps</a>
           <h2> 2)Chaos Encryption </h2>
           <h2> 3)The essence of Signal Processing </h2>
           <h2> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication) </h2>
