--- a/my_work.html
+++ b/my_work.html
@@ -88,7 +88,7 @@
     }
     
     .list h2 {
-      font-family: 'Oswald&family=Poppins:ital';
+      font-family: 'Oswald';
       font-size: 17px;
       color: #585858;
       margin: 10px 0;
