--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <a href="#" class="logo">Prachii K</a>
     <nav class="nav-items">
       <a href="https://cosmictheories.github.io/sparsity/my_work">My work</a>
-      <a href="#">Home</a>
-      <a href="#">2020</a>
+      <a href="https://cosmictheories.github.io/sparsity">Home</a>
+      <a href="#">ok</a>
       <a href="#">2021</a>
       <a href="#">2022</a>
     </nav>
