--- a/my_work.html
+++ b/my_work.html
@@ -97,7 +97,7 @@
     }
     
      .list a {
-      font-family: 'Libre+Franklin';
+      font-family: 'Poppins';
       font-size: 17px;
       color: #585858;
       margin: 10px 0;
