--- a/my_work.html
+++ b/my_work.html
@@ -171,8 +171,8 @@
       <div class="about-me-text">
         <h2>Passion Projects & Research</h2>
         <div class ="list">
-          <a href="#">1) Vacuum Tube Amps</a>
-          <h2> 2)Chaos Encryption </h2>
+          <a href="#">1) 1) Vacuum Tube </a>
+          <h2> 2)Chaos Encryption</h2>
           <h2> 3)The essence of Signal Processing </h2>
           <h2> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication) </h2>
       </div>
