--- a/my_work.html
+++ b/my_work.html
@@ -171,12 +171,11 @@
       <div class="about-me-text">
         <h2>Passion Projects & Research</h2>
         <div class ="list">
-          <a href="#">1) 1) Vacuum Tube </a>
-          <h2> 2)Chaos Encryption</h2>
-          <h2> 3)The essence of Signal Processing </h2>
-          <h2> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication) </h2>
+          <a href="#">1) Vacuum Tube </a>
+          <a href="#"> 2)Chaos Encryption</a>
+          <a href="#"> 3)The essence of Signal Processing </a>
+          <a href="#"> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication) </a>
       </div>
-      //<img src="https://ibb.co/d2KyMqV">
       <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
     </div>
   </main>
