--- a/my_work.html
+++ b/my_work.html
@@ -171,10 +171,12 @@
       <div class="about-me-text">
         <h2>Passion Projects & Research</h2>
         <div class ="list">
-          <a href="#">1) Vacuum Tube </a>
-          <a href="#"> 2)Chaos Encryption</a>
-          <a href="#"> 3)The essence of Signal Processing </a>
-          <a href="#"> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication) </a>
+       <a href="#"><br>1) Vacuum Tube</br> </a>
+       <a href="#"> <br>2)Chaos Encryption</br></a>
+       <a href="#"><br> 3)The Essence of Signal Processing</br> </a>
+       <a href="#"> <br> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication)</br> </a>
+       <a href="#"> <br> 5)Image Reconstruction & Solving for a Sparse Solution.</br> </a>
+    
       </div>
       <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
     </div>
