--- a/my_work.html
+++ b/my_work.html
@@ -175,8 +175,8 @@
        <a href="#"> <br>2)Chaos Encryption</br></a>
        <a href="#"><br> 3)The Essence of Signal Processing</br> </a>
        <a href="#"> <br> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication)</br> </a>
-       <a href="#"> <br> 5)Image Reconstruction & Solving for a Sparse Solution.</br> </a>
-    
+       <a href="#"> <br> 5)Image Reconstruction & Solving for a Sparse Solution (Research Publication)</br> </a>
+        <a href="#"> <br> 6) </br> </a>
       </div>
       <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
     </div>
