--- a/my_work.html
+++ b/my_work.html
@@ -15,6 +15,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&family=Raleway:wght@200&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:ital,wght@1,700&family=Raleway:wght@200&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 
     body {
       margin: 0;
@@ -97,7 +98,7 @@
     }
     
      .list a {
-      font-family: 'Poppins';
+      font-family: 'Libre+Franklin';
       font-size: 17px;
       color: #585858;
       margin: 10px 0;
