--- a/my_work/vacuum.html
+++ b/my_work/vacuum.html
@@ -153,10 +153,7 @@
     <a href="#" class="logo">Prachii K</a>
     <nav class="nav-items">
       <a href="https://cosmictheories.github.io/sparsity/my_work">My work</a>
-      <a href="#">2019</a>
-      <a href="#">2020</a>
-      <a href="#">2021</a>
-      <a href="#">2022</a>
+      <a href="https://cosmictheories.github.io/sparsity">Home</a>
     </nav>
   </header>
   <main>
@@ -169,8 +166,8 @@
       <div class="about-me-text">
         <h2>Passion Projects & Research</h2>
         <div class ="list">
-          <a href="#">1) Vacuum Tube </a>
-          <a href="#"> 2)Chaos Encryption</a>
+          <a href="#"><br>There’s something wonderful about listening to Jhene Aiko’s voice on a Friday night. It would seem that RnB music inspired me to delve into audio amplifiers. It began in college, starting with studying solid state amplifier circuitry and soldering cheap class D amplifiers from eBay together. </br></a>
+        <a href="#"> <br>Regrettably, I have no pictures from that era.</br></a>
           <a href="#"> 3)The essence of Signal Processing </a>
           <a href="#"> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication) </a>
       </div>
