--- a/my_work/vacuum.html
+++ b/my_work/vacuum.html
@@ -13,6 +13,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&family=Raleway:wght@200&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:ital,wght@1,700&family=Raleway:wght@200&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
     body {
       margin: 0;
@@ -95,7 +96,7 @@
     }
     
      .list a {
-      font-family: 'Poppins';
+      font-family: 'Roboto';
       font-size: 17px;
       color: #585858;
       margin: 10px 0;
