--- a/my_work.html
+++ b/my_work.html
@@ -98,7 +98,7 @@
     }
     
      .list a {
-      font-family: 'Libre+Franklin';
+      font-family: 'Poppins';
       font-size: 17px;
       color: #585858;
       margin: 10px 0;
@@ -156,10 +156,7 @@
     <a href="#" class="logo">Prachii K</a>
     <nav class="nav-items">
       <a href="https://cosmictheories.github.io/sparsity/my_work">My work</a>
-      <a href="#">2019</a>
-      <a href="#">2020</a>
-      <a href="#">2021</a>
-      <a href="#">2022</a>
+      <a href="https://cosmictheories.github.io/sparsity">Home</a>
     </nav>
   </header>
   <main>
@@ -172,14 +169,13 @@
       <div class="about-me-text">
         <h2>Passion Projects & Research</h2>
         <div class ="list">
-       <a href="#"><br>1) Vacuum Tube</br> </a>
-       <a href="#"> <br>2)Chaos Encryption</br></a>
+       <a href="#"><br>1) The Purity of Sound with Vacuum Tubes</br> </a>
+       <a href="#"> <br>2) Chaos: A Mathematical Adventure in Encryption</br></a>
        <a href="#"><br> 3)The Essence of Signal Processing</br> </a>
        <a href="#"> <br> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication)</br> </a>
        <a href="#"> <br> 5)Image Reconstruction & Solving for a Sparse Solution (Research Publication)</br> </a>
-        <a href="#"> <br> 6) </br> </a>
+        <a href="#"> <br> 6)The Microcontroller is the Backbone. </br> </a>
       </div>
-      <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
     </div>
   </main>
   <footer class="footer">
@@ -187,15 +183,11 @@
     <div class="bottom-links">
       <div class="links">
         <span>More Info</span>
-        <a href="#">Home</a>
-        <a href="#">About</a>
         <a href="#">Contact</a>
       </div>
       <div class="links">
         <span>Social Links</span>
         <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
   </footer>
