--- a/my_work/vacuum.html
+++ b/my_work/vacuum.html
@@ -169,9 +169,9 @@
         <div class ="list">
           <a href="#"><br>There’s something wonderful about listening to Jhene Aiko’s voice on a Friday night. It would seem that RnB music inspired me to delve into audio amplifiers. It began in college, starting with studying solid state amplifier circuitry and soldering cheap class D amplifiers from eBay together. </br></a>
         <a href="#"> <br>Regrettably, I have no pictures from that era.</br></a>
-          <a href="#"> 3)The essence of Signal Processing </a>
-          <a href="#"> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication) </a>
-      </div>
+      <p> <br> Shortly after, my interest moved into vacuum tube amplifiers. A hi-fidelity amplifier without any regular transistors (or an IC chip, for that matter) intrigued me. Solely consisting of capacitors, inductors, resistors and vacuum tubes, an old Magnavox-inspired tube amplifier was brought to life. (With a 3A fuse, and transformers, of course)</br>
+      <p> I had had many trial runs. One of the fails was recorded below in a ideo. The error occured because of wrong wiring, and out of phase feedback. <br>
+    </div>
       <a href="https://ibb.co/d2KyMqV"><img src="https://i.ibb.co/7WyFC5Z/starter.jpg" alt="starter" border="0"></a>
     </div>
   </main>
