--- a/my_work.html
+++ b/my_work.html
@@ -174,7 +174,7 @@
        <a href="https://cosmictheories.github.io/sparsity/signalprocessing"><br> 3)The Essence of Signal Processing</br> </a>
        <a href="https://cosmictheories.github.io/sparsity/my_work/speech"> <br> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication)</br> </a>
        <a href="#"> <br> 5)Image Reconstruction & Solving for a Sparse Solution (Research Publication)</br> </a>
-        <a href="#"> <br> 6)The Microcontroller is the Backbone. </br> </a>
+        <a href="#"> <br> 6)The Microcontroller is the Backbone.. </br> </a>
       </div>
     </div>
   </main>
