--- a/my_work/vacuum.html
+++ b/my_work/vacuum.html
@@ -180,8 +180,9 @@
       <p> <br> Shortly after, my interest moved into vacuum tube amplifiers. A hi-fidelity amplifier without any regular transistors (or an IC chip, for that matter) intrigued me. Solely consisting of capacitors, inductors, resistors and vacuum tubes, an old Magnavox-inspired tube amplifier was brought to life. </br></p>
       <p> I had had many trial runs. One of the fails was recorded below in a ideo. The error occured because of wrong wiring, and out of phase feedback. <br>
         <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=Myj-aIommmA">
+src="https://www.youtube.com/embed/Myj-aIommmA">
 </iframe>
+        
     </div>
      
     </div>
