--- a/my_work/vacuum.html
+++ b/my_work/vacuum.html
@@ -178,12 +178,12 @@
           <p><br>There’s something wonderful about listening to Jhene Aiko’s voice on a Friday night. It would seem that RnB music inspired me to delve into audio amplifiers. It all began in college; starting with studying solid state amplifier circuitry and soldering cheap class D amplifiers from eBay together. </br></p>
         <p> <br>Regrettably, I have no pictures from that era.</br></a>
       <p> <br> Shortly after, my interest moved into vacuum tube amplifiers. A hi-fidelity amplifier without any regular transistors (or an IC chip, for that matter) intrigued me. Solely consisting of capacitors, inductors, resistors and vacuum tubes, an old Magnavox-inspired tube amplifier was brought to life. </br></p>
-      <p> I had had many trial runs. One of the fails was recorded below in a ideo. The error occured because of wrong wiring, and out of phase feedback. <br>
+      <p> I had had many trial runs. One of the fails was recorded below in a video. The error occured because of wrong wiring, and out of phase feedback. <br>
         <iframe width="420" height="315"
 src="https://www.youtube.com/embed/Myj-aIommmA">
 </iframe>
-        <p> 
-        
+<p><br>I won’t lie, it was a frustrating process to get this to work. I got lucky with my transformer manufacturer; I’d say they make some of the best transformers in the country. It took a few weeks for the tubes that I’d ordered from Russia to show up. I owe the opportunity of this project to my landlord, as he funded the entirety of the project. I agreed to build it for him.</br><p>
+<p> <br>It sounded marvelous. Analog signals never fascinated me more as Sabrina Claudio’s voice poured through the speakers. Alas, a tube amplifier! I went on to build and sell 3 more.</br> <p>
     </div>
      
     </div>
