--- a/my_work/vacuum.html
+++ b/my_work/vacuum.html
@@ -183,7 +183,7 @@
 src="https://www.youtube.com/embed/Myj-aIommmA">
 </iframe>
 <p><br>I won’t lie, it was a frustrating process to get this to work. I got lucky with my transformer manufacturer; I’d say they make some of the best transformers in the country. It took a few weeks for the tubes that I’d ordered from Russia to show up. I owe the opportunity of this project to my landlord, as he funded the entirety of the project. I agreed to build it for him.</br><p>
-<p> <br>It sounded marvelous. Analog signals never fascinated me more as Sabrina Claudio’s voice poured through the speakers. Alas, a tube amplifier! I went on to build and sell 3 more.</br> <p>
+<p> <br>It sounded marvelous. Analog signals never fascinated me more as Sabrina Claudio’s voice poured through the speakers. Alas, a 600V beauty of an amplifier! I went on to build and sell 3 more.</br> <p>
     </div>
      
     </div>
