--- a/my_work.html
+++ b/my_work.html
@@ -167,7 +167,7 @@
     </div>
     <div class="about-me">
       <div class="about-me-text">
-        <h2>Passion Projects & Research</h2>
+        <h2>And so the list goes:</h2>
         <div class ="list">
        <a href="https://cosmictheories.github.io/sparsity/my_work/vacuum"><br>1) The Purity of Sound with Vacuum Tubes</br> </a>
        <a href="https://cosmictheories.github.io/sparsity/encryption"> <br>2) Chaos: A Mathematical Adventure in Encryption</br></a>
