--- a/my_work/encryption.html
+++ b/my_work/encryption.html
@@ -1,6 +1,3 @@
-. I decided to be the project leader of a team, to design an encryption system that utilized the theory of non-linear dynamical systems in conjunction with neural networks. After the shared key and plaintext are fed into the system, we proposed to extract values from the chaotic region of the logistic map, while having the key set the initial conditions for the logistic equation. We utilized the Lyapunov exponent and neural networks to encrypt the plaintext, through the generation of a chaotic binary sequence. Along with our computed P-values of the 192 bits of input being greater than 0.01, we passed all the NIST tests, proving the sequence to be completely random and tough to break.
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -177,14 +174,13 @@
       <div class="about-me-text">
         <h2>Chaos: A Mathematical Adventure in Encryption</h2>
         <div class ="list">
-          <p><br>I decided that I wanted to design intelligent systems through ML, NNs and signal processing. In order to lay the foundation of solely using neural networks that can serve a purpose, I decided to integrate NNs with fundamental mathematics. For my bachelor’s minor thesis, realizing that security is an important parameter in any comprehensive system, I took cryptography as an elective during my undergradute course.</br></p>
-        <p> <br>I decided, with two of my friends, to design an encryption system that utilized the theory of non-linear dynamical systems in conjunction with neural networks. After the shared key and plaintext are fed into the system, we proposed to extract values from the chaotic region of the logistic map, while having the key set the initial conditions for the logistic equation</br></a>
-      <p> <br> Shortly after, my interest moved into vacuum tube amplifiers. A hi-fidelity amplifier without any regular transistors (or an IC chip, for that matter) intrigued me. Solely consisting of capacitors, inductors, resistors and vacuum tubes, an old Magnavox-inspired tube amplifier was brought to life. </br></p>
+          <p><br> It’s evident that security is an important parameter in any comprehensive system. I figured that cryptography would be an interesting elective during my undergraduate course. </br></p>
+        <p> <br>In my bachelor’s minor thesis, along with two of my friends, I decided to integrate NNs with mathematics (theory of non-linear dynamical systems) to design an encryption system. After the shared key and plaintext are fed into the system, we proposed to extract values from the chaotic region of the logistic map, while having the key set the initial conditions for the logistic equation.</br></a>
       <p> I had had many trial runs. One of the fails was recorded below in a video. The error occured because of wrong wiring, and out of phase feedback. <br>
         <iframe width="420" height="315"
 src="https://www.youtube.com/embed/Myj-aIommmA">
 </iframe>
-<p><br>I won’t lie, it was a frustrating process to get this to work. I got lucky with my transformer manufacturer; I’d say they make some of the best transformers in the country. It took a few weeks for the tubes that I’d ordered from Russia to show up. I owe the opportunity of this project to my landlord, as he funded the entirety of the project. I agreed to build it for him.</br><p>
+<p><br>. We utilized the Lyapunov exponent and neural networks to encrypt the plaintext, through the generation of a chaotic binary sequence. Along with our computed P-values of the 192 bits of input being greater than 0.01, we passed all the NIST tests, proving the sequence to be completely random and tough to break.</br><p>
 <p> <br>It sounded marvelous. Analog signals never fascinated me more as Sabrina Claudio’s voice poured through the speakers. Alas, a 600V beauty of an amplifier! I went on to build and sell 3 more.</br> <p>
     </div>
      
