--- a/my_work.html
+++ b/my_work.html
@@ -170,7 +170,7 @@
         <h2>And so the list goes:</h2>
         <div class ="list">
        <a href="https://cosmictheories.github.io/sparsity/my_work/vacuum"><br>1) The Purity of Sound with Vacuum Tubes</br> </a>
-       <a href="https://cosmictheories.github.io/sparsity/encryption"> <br>2) Chaos: A Mathematical Adventure in Encryption</br></a>
+       <a href="https://cosmictheories.github.io/sparsity/my_work/encryption"> <br>2) Chaos: A Mathematical Adventure in Encryption</br></a>
        <a href="https://cosmictheories.github.io/sparsity/signalprocessing"><br> 3)The Essence of Signal Processing</br> </a>
        <a href="https://cosmictheories.github.io/sparsity/my_work/speech"> <br> 4)How the PCEN Transformation Challenged Acoustic Front Ends (Research Publication)</br> </a>
        <a href="#"> <br> 5)Image Reconstruction & Solving for a Sparse Solution (Research Publication)</br> </a>
