--- a/my_work/vacuum.html
+++ b/my_work/vacuum.html
@@ -177,7 +177,7 @@
         <div class ="list">
           <p><br>There’s something wonderful about listening to Jhene Aiko’s voice on a Friday night. It would seem that RnB music inspired me to delve into audio amplifiers. It all began in college; starting with studying solid state amplifier circuitry and soldering cheap class D amplifiers from eBay together. </br></p>
         <p> <br>Regrettably, I have no pictures from that era.</br></a>
-      <p> <br> Shortly after, my interest moved into vacuum tube amplifiers. A hi-fidelity amplifier without any regular transistors (or an IC chip, for that matter) intrigued me. Solely consisting of capacitors, inductors, resistors and vacuum tubes, an old Magnavox-inspired tube amplifier was brought to life. </br></p>
+      <p> <br> Shortly after, my landlord found an interest in my amplifiers. I think, perhaps, his interest piqued after all the loud music that I played, aha. He suggested that I look into into vacuum tube amplifiers. After an hour of googling and weeks of research, I think the idea of a hi-fidelity amplifier without any regular transistors (or an IC chip, for that matter) intrigued me. Solely consisting of capacitors, inductors, resistors and vacuum tubes, an old Magnavox-inspired tube amplifier was brought to life. </br></p>
       <p> I had had many trial runs. One of the fails was recorded below in a video. The error occured because of wrong wiring, and out of phase feedback. <br>
         <iframe width="420" height="315"
 src="https://www.youtube.com/embed/Myj-aIommmA">
